[package]
name = "listclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wishlib = {path = "../wishlib", version = "*" }
gloo-net = {version = "0.2", features= ["http"]}
gloo-console = "0.2"
serde_json = "1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"